Address some issues found in automated code review:
* Switch from using field numbers directly to defining them via constants
* Tidy up argument checking so that we validate the types of the escape constant correctly
* Additional handling the `NullValue`, which is what the `SQLGenerator` creates if the `ESCAPE` field is not set
* A few typo fixes
* Add tests for an empty escape character, and now validate that the escape is size 1 before extracting the first character from it